# agent_maker

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dioxus.toml  Dockerfile  README.md  docker-compose.yml
assets/: main.css  tailwind.css
migrations/: 0001_init.sql  0002_agents.sql  0003_skills.sql
src/: main.rs  memory.rs  server_fns.rs
src/components/: agent_card.rs  blog.rs  chat.rs  chat_window.rs  dashboard.rs  edit_agent_modal.rs  edit_skill_modal.rs  home.rs  mod.rs  navbar.rs  new_agent_modal.rs  new_skill_modal.rs  skill_card.rs  skills_dashboard.rs  ui.rs
src/models/: agent_model.rs  mod.rs  skill_model.rs
