[package]
name = "agent_maker"
version = "0.1.0"
authors = ["Julio Valsesia <jvalsesia@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.9", features = ["router", "fullstack"] }
rig-core = { version = "0.37.0", optional = true }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "macros", "migrate"], optional = true }
pgvector = { version = "0.4", features = ["sqlx"], optional = true }
tokio = { version = "1", features = ["sync"], optional = true }
anyhow = { version = "1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.23.1", features = ["v4", "js"] }


[features]
default = ["web", "server"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
    "dioxus/server",
    "dep:rig-core",
    "dep:sqlx",
    "dep:pgvector",
    "dep:tokio",
    "dep:anyhow",
]
